// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooFabListComponent rendering should render a yoo-fab-list with buttons inside 1`] = `
<yoo-fab-container
  class="hydrated"
  data-yoo-fab-container-host=""
  data-yoo-fab-container-slot=""
>
  
  
  
  
  
  
  
  
                    
  <yoo-fab-button
    class="hydrated"
    data-yoo-fab-button-host=""
  >
    
    <div
      class="fab-button"
      data-yoo-fab-button=""
    >
      <yoo-button
        class="fab icon-only"
        data-yoo-fab-button=""
        icon=""
        text=""
      />
    </div>
  </yoo-fab-button>
  
                    
  <yoo-fab-list
    class="bottom hydrated"
    data-yoo-fab-list-host=""
    data-yoo-fab-list-slot=""
    id="list1"
    side="bottom"
  >
    
    
    
    
    
    
    
    
                        
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                        
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                    
  </yoo-fab-list>
  
                
</yoo-fab-container>
`;

exports[`YooFabListComponent rendering should render multiple yoo-fab-lists with buttons inside 1`] = `
<yoo-fab-container
  class="hydrated"
  data-yoo-fab-container-host=""
  data-yoo-fab-container-slot=""
>
  
  
  
  
  
  
  
  
  
  
                    
  <yoo-fab-button
    class="hydrated"
    data-yoo-fab-button-host=""
  >
    
    <div
      class="fab-button"
      data-yoo-fab-button=""
    >
      <yoo-button
        class="fab icon-only"
        data-yoo-fab-button=""
        icon=""
        text=""
      />
    </div>
  </yoo-fab-button>
  
                    
  <yoo-fab-list
    class="bottom hydrated"
    data-yoo-fab-list-host=""
    data-yoo-fab-list-slot=""
    id="list1"
    side="bottom"
  >
    
    
    
    
    
    
                        
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                    
  </yoo-fab-list>
  
                    
  <yoo-fab-list
    class="bottom hydrated"
    data-yoo-fab-list-host=""
    data-yoo-fab-list-slot=""
    id="list2"
    side="bottom"
  >
    
    
    
    
    
    
    
    
    
    
                        
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                        
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                        
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                    
  </yoo-fab-list>
  
                
</yoo-fab-container>
`;
